Update repository URL in package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "engines": {
     "vscode": "^1.85.0"
   },
-  "repository": "https://github.com/tu-usuario/tu-repositorio.git",
+  "repository": "https://github.com/JostyTafur/html-to-css",
   "categories": [
     "Other"
   ],
